endpoint enhancements and change in unique constraint logic to check in code